# EvoAgent-Network

./: .env.example  .gitignore  README.md  api.py  check_functionality.py  check_ui_position.py  cli.py  debug_css.py  demo.py  observability_api.py  pyproject.toml  requirements.txt
.sdd/specs/001-hybrid-ai-system/: plan.md  spec.md  tasks.md
data/agents/_deprecated/: README_v1.md
data/skills/: CLAUDE.md  README.md
data/skills/21-multiagent-learning-system/: SKILL.md
data/skills/22-blockchain-agent-security/: SKILL.md
data/skills/23-frontend-design-architect/: SKILL.md
data/skills/24-spec-driven-planner/: SKILL.md
data/skills/25-backend-architect/: SKILL.md
data/skills/26-investment-trading-systems/: SKILL.md
data/skills/27-web-search/: SKILL.md
data/skills/28-agent-memory/: README.md
data/skills/docs/: example1.md  example2.md  example3.md
data/skills/guidebooks/: GUIDEBOOK_01_FOUNDATIONS.md  GUIDEBOOK_02_TRAINING.md  GUIDEBOOK_03_DEPLOYMENT_OPS.md  GUIDEBOOK_04_APPLICATIONS.md  GUIDEBOOK_05_SPECIALISTS.md  GUIDEBOOK_06_WORKFLOWS.md  GUIDEBOOK_07_MULTIAGENT_CODING.md  GUIDEBOOK_07_TRADING_WORKFLOWS.md  GUIDEBOOK_INDEX.md
personal_rag_db/1612b706-d523-44eb-9d54-aac36eba3db1/: index_metadata.pickle
src/haes/: __init__.py  config.py  exceptions.py  system.py
src/haes/llm/: __init__.py  (+1 more)
static/: index.html  observability_dashboard.html
tests/: __init__.py  conftest.py
tests/integration/: test_system.py
tests/unit/: test_agent_pool.py  test_evolution.py  test_feedback_store.py  test_keyword_matcher.py  test_router.py  test_skill_store.py
(+158 files in other folders)
